Adjusts padding of input to prevent overlap

--- a/style.module.css
+++ b/style.module.css
@@ -68,7 +68,7 @@
 
 .sidebar .search {
   font-size: 1rem;
-  padding: 0.75rem 1rem;
+  padding: 0.75rem 2.5rem 0.75rem 1rem;
   border: 1px solid #373942;
   background-color: rgba(255, 255, 255, 0.1);
   color: white;
